# jlabs-chat

./: LICENSE  pyproject.toml
jlabs_chat/: jlabs_en.txt  qa.py  qa1.py
jlabs_chat/.chroma/index/: id_to_uuid_53e69af6-8dd4-4d89-b270-ff2aa73dd08e.pkl  index_metadata_53e69af6-8dd4-4d89-b270-ff2aa73dd08e.pkl  uuid_to_id_53e69af6-8dd4-4d89-b270-ff2aa73dd08e.pkl
